unpackaged/main/default/objects/OpportunityGroup__c/OpportunityGroup__c.object-meta.xml
<CustomObject>
    <label>Группа проекта</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Идентификатор</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Группа проекта</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>