unpackaged/main/default/objects/OpportunityGroup__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Возможность</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>OppGroup</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>