unpackaged/main/default/objects/OpportunityGroup__c/fields/UserRole__c.field-meta.xml
<CustomField>
    <fullName>UserRole__c</fullName>
    <label>Роль</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Менеджер по продажам</fullName>
            </value>
            <value>
                <fullName>Региональный менеджер по продажам</fullName>
            </value>
            <value>
                <fullName>Руководитель отдела продаж</fullName>
            </value>
            <value>
                <fullName>Руководитель сервисной службы</fullName>
            </value>
            <value>
                <fullName>Сервисный инженер</fullName>
            </value>
            <value>
                <fullName>Проектировщик</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>