unpackaged/main/default/objects/OpportunityGroup__c/fields/UserTION__c.field-meta.xml
<CustomField>
    <fullName>UserTION__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Сотрудник</label>
    <referenceTo>User__c</referenceTo>
    <relationshipName>UserTION</relationshipName>
    <type>Lookup</type>
</CustomField>